[package]
name = "exochain-dag-db-lab"
description = "EXOCHAIN DAG DB diagnostics, graph explorer, benchmarks, and lab tools"
documentation = "https://docs.rs/exochain-dag-db-lab"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag_db_lab"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
postgres = ["exo-dag-db-postgres/postgres", "dep:sqlx", "dep:tokio"]

[[bin]]
name = "dagdb_kg_import_persist"
path = "src/bin/dagdb_kg_import_persist.rs"
required-features = ["postgres"]

[[bin]]
name = "dagdb_agent_brain_writeback_growth_smoke"
path = "src/bin/dagdb_agent_brain_writeback_growth_smoke.rs"
required-features = ["postgres"]

[[bin]]
name = "dagdb_kg_export_manifest"
path = "src/bin/dagdb_kg_export_manifest.rs"

[[bin]]
name = "dagdb_kg_import_candidates"
path = "src/bin/dagdb_kg_import_candidates.rs"

[[bench]]
name = "packet_pipeline"
harness = false
required-features = ["postgres"]

[[bench]]
name = "scale_curve"
harness = false
required-features = ["postgres"]

[[bench]]
name = "concurrency"
harness = false
required-features = ["postgres"]

[dependencies]
exo-dag-db-api = { package = "exochain-dag-db-api", path = "../exo-dag-db-api", version = "=0.2.2" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.2" }
exo-dag-db-core = { package = "exochain-dag-db-core", path = "../exo-dag-db-core", version = "=0.2.2" }
exo-dag-db-domain = { package = "exochain-dag-db-domain", path = "../exo-dag-db-domain", version = "=0.2.2" }
exo-dag-db-exchange = { package = "exochain-dag-db-exchange", path = "../exo-dag-db-exchange", version = "=0.2.2" }
exo-dag-db-graph = { package = "exochain-dag-db-graph", path = "../exo-dag-db-graph", version = "=0.2.2" }
exo-dag-db-postgres = { package = "exochain-dag-db-postgres", path = "../exo-dag-db-postgres", version = "=0.2.2" }
exo-dag-db-retrieval = { package = "exochain-dag-db-retrieval", path = "../exo-dag-db-retrieval", version = "=0.2.2" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "macros"] }

[dev-dependencies]
criterion = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }
