[package]
name = "exo-dag-db-postgres"
description = "EXOCHAIN DAG DB PostgreSQL persistence adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
postgres = ["dep:sqlx", "dep:tokio", "dep:tracing"]

[dependencies]
exo-dag-db-api = { path = "../exo-dag-db-api" }
exo-core = { path = "../exo-core" }
exo-dag = { path = "../exo-dag" }
exo-dag-db-core = { path = "../exo-dag-db-core" }
exo-dag-db-domain = { path = "../exo-dag-db-domain" }
exo-dag-db-exchange = { path = "../exo-dag-db-exchange" }
exo-dag-db-graph = { path = "../exo-dag-db-graph" }
exo-dag-db-retrieval = { path = "../exo-dag-db-retrieval" }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true, features = ["rt", "macros"] }
tracing = { workspace = true, optional = true }
