[package]
name = "exo-dag-db-retrieval"
description = "EXOCHAIN DAG DB retrieval, routing, and context packet selection"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
exo-dag-db-api = { path = "../exo-dag-db-api" }
exo-core = { path = "../exo-core" }
exo-dag-db-core = { path = "../exo-dag-db-core" }
exo-dag-db-domain = { path = "../exo-dag-db-domain" }
exo-dag-db-graph = { path = "../exo-dag-db-graph" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
