[package]
name = "exo-dag"
description = "EXOCHAIN append-only DAG with BFT consensus and Merkle structures"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
postgres = ["dep:sqlx", "dep:serde_json"]

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "append_normative"
harness = false

[package.metadata.cargo-machete]
ignored = ["uuid"]
