# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-dag"
description = "EXOCHAIN append-only DAG with BFT consensus and Merkle structures"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_dag"
path = "src/lib.rs"

[lints]
workspace = true

[features]
default = []
postgres = ["dep:sqlx", "dep:serde_json"]

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.2" }
serde = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
# Minimal tokio — we only use `#[tokio::test]` (dev) and async fn
# signatures. Wasm32 tokio supports only {sync, macros, io-util,
# rt, time}; on native we also need rt-multi-thread for the test
# harness. Split per target so the WASM build path stays clean.
tokio = { version = "1", default-features = false, features = ["sync", "macros", "rt", "time"] }
sqlx = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# rt-multi-thread is needed by `#[tokio::test(flavor = "multi_thread")]`
# in integration tests and benches; unavailable on wasm32.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "append_normative"
harness = false

[package.metadata.cargo-machete]
ignored = ["uuid"]
