[package]
name = "exo-escalation"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Escalation, triage, and kanban control plane — adverse event detection, outlier flagging, backlog management"

[dependencies]
exo-core.workspace = true
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
thiserror.workspace = true
chrono.workspace = true

[dev-dependencies]
tokio.workspace = true
