[package]
name = "exo-escalation"
description = "EXOCHAIN constitutional trust fabric — operational nervous system: detection, triage, kanban, HITL, Sybil adjudication"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-governance = { path = "../exo-governance" }
ciborium = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
exo-gatekeeper = { path = "../exo-gatekeeper" }
proptest = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing workspace dep used via re-exports.
ignored = ["exo-identity"]
