[package]
name = "exo-gatekeeper"
description = "EXOCHAIN judicial branch — CGR kernel, combinator algebra, invariant enforcement, Holon runtime, MCP middleware"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }

[features]
allow-simulated-tee = []

[dev-dependencies]

[package.metadata.cargo-machete]
# Pre-existing deps used via feature flags or conditional compilation.
ignored = ["ed25519-dalek", "tracing"]
