# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exo-gatekeeper"
description = "EXOCHAIN judicial branch — CGR kernel, combinator algebra, invariant enforcement, Holon runtime, MCP middleware"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
exo-api = { path = "../exo-api" }
exo-consent = { path = "../exo-consent" }
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
serde = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[features]
allow-simulated-tee = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
exo-dag-db-core = { path = "../exo-dag-db-core" }
exo-dag-db-domain = { path = "../exo-dag-db-domain" }
exo-dag-db-exchange = { path = "../exo-dag-db-exchange" }
exo-dag-db-postgres = { path = "../exo-dag-db-postgres", features = ["postgres"] }
sqlx = { workspace = true }

[dev-dependencies]
exo-api = { path = "../exo-api" }
exo-core = { path = "../exo-core" }
serde_json = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing deps used via feature flags or conditional compilation.
ignored = ["ed25519-dalek", "tracing"]
