# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-gatekeeper"
description = "EXOCHAIN judicial branch — CGR kernel, combinator algebra, invariant enforcement, Holon runtime, MCP middleware"
documentation = "https://docs.rs/exochain-gatekeeper"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_gatekeeper"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-api = { package = "exochain-api", path = "../exo-api", version = "=0.2.3" }
exo-consent = { package = "exochain-consent", path = "../exo-consent", version = "=0.2.3" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.3" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.3" }
serde = { workspace = true }
blake3 = { workspace = true }
ciborium = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
hex = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
exo-dag-db-core = { package = "exochain-dag-db-core", path = "../exo-dag-db-core", version = "=0.2.3" }
exo-dag-db-domain = { package = "exochain-dag-db-domain", path = "../exo-dag-db-domain", version = "=0.2.3" }
exo-dag-db-exchange = { package = "exochain-dag-db-exchange", path = "../exo-dag-db-exchange", version = "=0.2.3" }
exo-dag-db-postgres = { package = "exochain-dag-db-postgres", path = "../exo-dag-db-postgres", version = "=0.2.3", features = ["postgres"] }
sqlx = { workspace = true }

[dev-dependencies]
exo-api = { package = "exochain-api", path = "../exo-api", version = "=0.2.3" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.3" }
serde_json = { workspace = true }
tokio = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing deps used via feature flags or conditional compilation.
ignored = ["ed25519-dalek", "tracing"]
