# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exo-gateway"
description = "EXOCHAIN constitutional trust fabric — HTTP gateway server with default-deny pattern"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
decision-forum = { path = "../decision-forum" }
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-consent = { path = "../exo-consent" }
exo-gatekeeper = { path = "../exo-gatekeeper" }
exo-governance = { path = "../exo-governance" }
exo-legal = { path = "../exo-legal" }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
rustls = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
sqlx = { workspace = true }
hex = { workspace = true }
percent-encoding = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true, features = ["std", "now"] }
getrandom = { workspace = true }
zeroize = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-stream = { workspace = true }

[features]
## Enable the production DB-backed adjudication context resolver.
##
## When this feature is active, `AppState::build_adjudication_context` queries
## `agent_roles`, `consent_records`, and `authority_chains` instead of returning
## the WO-009 deny-all scaffold.  The scaffold remains the default so that
## dev/test environments do not need a live database.
production-db = []

## Enable the unaudited GraphQL API surface.
##
## Default OFF. The current GraphQL resolvers include unaudited governance
## mutations, fabricated consent evaluation, and proof-verification scaffolding.
## Keep this disabled outside explicitly-audited development compatibility runs.
unaudited-gateway-graphql-api = []

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true }
sha2 = { workspace = true }
