# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-gateway"
description = "EXOCHAIN constitutional trust fabric — HTTP gateway server with default-deny pattern"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_gateway"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
decision-forum = { package = "exochain-decision-forum", path = "../decision-forum", version = "=0.2.1-beta" }
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.1-beta" }
exo-api = { package = "exochain-api", path = "../exo-api", version = "=0.2.1-beta" }
exo-dag-db-core = { package = "exochain-dag-db-core", path = "../exo-dag-db-core", version = "=0.2.1-beta" }
exo-dag-db-domain = { package = "exochain-dag-db-domain", path = "../exo-dag-db-domain", version = "=0.2.1-beta" }
exo-dag-db-exchange = { package = "exochain-dag-db-exchange", path = "../exo-dag-db-exchange", version = "=0.2.1-beta" }
exo-dag-db-postgres = { package = "exochain-dag-db-postgres", path = "../exo-dag-db-postgres", version = "=0.2.1-beta", default-features = false, optional = true }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.1-beta" }
exo-consent = { package = "exochain-consent", path = "../exo-consent", version = "=0.2.1-beta" }
exo-gatekeeper = { package = "exochain-gatekeeper", path = "../exo-gatekeeper", version = "=0.2.1-beta" }
exo-governance = { package = "exochain-governance", path = "../exo-governance", version = "=0.2.1-beta" }
exo-legal = { package = "exochain-legal", path = "../exo-legal", version = "=0.2.1-beta" }
bs58 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true, features = ["tls-rustls-no-provider"] }
rustls = { workspace = true }
tower = { workspace = true, features = ["load-shed"] }
tower-http = { workspace = true, features = ["timeout"] }
sqlx = { workspace = true }
hex = { workspace = true }
percent-encoding = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true, features = ["std", "now"] }
getrandom = { workspace = true }
zeroize = { workspace = true, features = ["serde"] }
ciborium = { workspace = true }
tracing-subscriber = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-stream = { workspace = true }

[[bin]]
name = "exo-gateway"
path = "src/main.rs"

[[bin]]
name = "dagdb_writeback_sign"
path = "src/bin/dagdb_writeback_sign.rs"
required-features = ["production-db"]

[features]
default = ["production-db"]

## Enable the production DB-backed adjudication context resolver.
##
## When this feature is active, `AppState::build_adjudication_context` queries
## `agent_roles`, `consent_records`, and `authority_chains` instead of returning
## the WO-009 deny-all scaffold, and the DAG DB persistence adapters compile
## through `exo-dag-db-postgres/postgres`. Runtime DB configuration is still
## explicit; missing DB/runtime state remains fail-closed instead of falling
## back to fake or in-memory data. Use `--no-default-features` only for explicit
## minimal test/dev builds that intentionally keep this production path out.
production-db = ["dep:exo-dag-db-postgres", "exo-dag-db-postgres/postgres"]
postgres = ["production-db"]

## Enable the unaudited GraphQL API surface.
##
## Default OFF. The current GraphQL resolvers include unaudited governance
## mutations, fabricated consent evaluation, and proof-verification scaffolding.
## Keep this disabled outside explicitly-audited development compatibility runs.
unaudited-gateway-graphql-api = []

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tower = { workspace = true }
sha2 = { workspace = true }
bs58 = { workspace = true }
