[package]
name = "exo-governance"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "decision.forum governance domain: Decision Objects, Constitutional Corpus, Authority Delegations, Challenges, Emergency Actions, Audit Trail"

[dependencies]
exo-core.workspace = true
exo-identity.workspace = true
serde.workspace = true
serde_cbor.workspace = true
blake3.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde_json = "1.0"

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
tokio.workspace = true
