[package]
name = "exo-governance"
description = "EXOCHAIN constitutional trust fabric — legislative legitimacy: quorum, clearance, crosscheck, challenge, delegation, deliberation"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-consent = { path = "../exo-consent" }
exo-authority = { path = "../exo-authority" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing workspace deps used via re-exports or trait bounds.
ignored = ["exo-authority", "exo-consent", "exo-identity"]
