# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exo-governance"
description = "EXOCHAIN constitutional trust fabric — legislative legitimacy: quorum, clearance, crosscheck, challenge, delegation, deliberation"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
ciborium = { workspace = true }
exo-identity = { path = "../exo-identity" }
exo-consent = { path = "../exo-consent" }
exo-authority = { path = "../exo-authority" }
serde = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing workspace deps used via re-exports or trait bounds.
ignored = ["exo-authority", "exo-consent", "exo-identity"]
