[package]
name = "exo-identity"
description = "EXOCHAIN constitutional trust fabric — privacy-preserving identity adjudication"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
serde = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
rand = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
