# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-identity"
description = "EXOCHAIN constitutional trust fabric — privacy-preserving identity adjudication"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_identity"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.0-beta" }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
bs58 = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
getrandom = { workspace = true }
zeroize = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
# Used by tests to deserialize malformed-input fixtures (e.g. empty Did)
# that `Did::new()` rejects but could arrive from network/storage.
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing deps used in wasm/no_std feature paths.
ignored = ["getrandom", "uuid"]
