[package]
name = "exo-legal"
description = "EXOCHAIN constitutional trust fabric — litigation-grade evidence, eDiscovery, privilege, fiduciary duty"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
exo-core = { path = "../exo-core" }
exo-identity = { path = "../exo-identity" }
exo-authority = { path = "../exo-authority" }
exo-governance = { path = "../exo-governance" }
exo-gatekeeper = { path = "../exo-gatekeeper" }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing workspace dep used via re-exports.
ignored = ["exo-identity"]
