# Copyright 2026 Exochain Foundation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at:
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "exochain-legal"
description = "EXOCHAIN constitutional trust fabric — litigation-grade evidence, eDiscovery, privilege, fiduciary duty"
documentation = "https://docs.exochain.io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "exo_legal"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
exo-core = { package = "exochain-core", path = "../exo-core", version = "=0.2.0-beta" }
exo-identity = { package = "exochain-identity", path = "../exo-identity", version = "=0.2.0-beta" }
exo-authority = { package = "exochain-authority", path = "../exo-authority", version = "=0.2.0-beta" }
exo-governance = { package = "exochain-governance", path = "../exo-governance", version = "=0.2.0-beta" }
exo-gatekeeper = { package = "exochain-gatekeeper", path = "../exo-gatekeeper", version = "=0.2.0-beta" }
serde = { workspace = true }
ciborium = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }

[package.metadata.cargo-machete]
# Pre-existing workspace dep used via re-exports.
ignored = ["exo-identity"]
